--- a/apps/dashboard/src/app/account/billing/subscriptions/subscriptions.component.scss
+++ b/apps/dashboard/src/app/account/billing/subscriptions/subscriptions.component.scss
@@ -1,5 +1,9 @@
 @import 'variables';
 
+h2 {
+  margin-bottom: 0;
+}
+
 .header {
   display: flex;
   align-items: baseline;
@@ -8,6 +12,7 @@
 .field-block {
   width: rhythm(24);
   margin-bottom: rhythm(1);
+  margin-top: rhythm(2);
 }
 .subscriptions {
   margin-bottom: rhythm(8);
@@ -63,5 +68,15 @@
   }
 }
 .calculator {
-  margin-top: rhythm(1);
+  margin-top: rhythm(2);
+}
+
+.cancel-subscription {
+  background-color: $color-secondary-lightest;
+  display: flex;
+  flex-direction: column;
+  gap: rhythm(2);
+  padding: rhythm(3);
+  margin-top: rhythm(6);
+  max-width: rhythm(60);
 }
