--- a/apps/dashboard/src/app/account/billing/usage/usage.component.html
+++ b/apps/dashboard/src/app/account/billing/usage/usage.component.html
@@ -1,25 +1,25 @@
 <div class="usage-container">
-  <header>
-    <h2>{{ 'billing.usage.title' | translate }}</h2>
-    <div></div>
-  </header>
+  <app-usage-table [usage]="usage | async"></app-usage-table>
 
-  <pa-table
-    *ngIf="invoiceItems | async as invoiceItems"
-    columns="300px auto auto auto auto">
-    <pa-table-header>
-      <pa-table-cell header>{{ 'billing.usage.consumables' | translate }}</pa-table-cell>
-      <pa-table-cell header>{{ 'billing.usage.tier_included' | translate }}</pa-table-cell>
-      <pa-table-cell header>{{ 'billing.usage.consumption' | translate }}</pa-table-cell>
-      <pa-table-cell header>{{ 'billing.usage.over_consume' | translate }}</pa-table-cell>
-      <pa-table-cell header>{{ 'billing.usage.over_cost' | translate }}</pa-table-cell>
-    </pa-table-header>
-    <pa-table-row *ngFor="let item of invoiceItems">
-      <pa-table-cell>{{ 'billing.parameter.' + item[0] | translate }}</pa-table-cell>
-      <pa-table-cell>{{ item[1].threshold | number }}</pa-table-cell>
-      <pa-table-cell>{{ item[1].current_usage | number }}</pa-table-cell>
-      <pa-table-cell>{{ item[1].over_usage | number }}</pa-table-cell>
-      <pa-table-cell>{{ item[1].over_cost | currency: (usage | async).currency }}</pa-table-cell>
-    </pa-table-row>
-  </pa-table>
+  <div class="budget-form">
+    <div>
+      <h2>{{ 'billing.budget' | translate }}</h2>
+      <div [innerHTML]="'billing.budget_description' | translate"></div>
+    </div>
+    <div class="budget-input">
+      <pa-input
+        type="number"
+        externalLabel
+        [formControl]="budget"></pa-input>
+      <span class="title-m">
+        {{ (usage | async)?.currency === 'USD' ? '$' : '€' }}
+      </span>
+    </div>
+    <pa-button
+      kind="primary"
+      [disabled]="budget.pristine || budget.invalid"
+      (click)="saveBudget()">
+      {{ 'generic.save' | translate }}
+    </pa-button>
+  </div>
 </div>
