--- a/apps/dashboard/src/app/account/account-home/account-home.component.scss
+++ b/apps/dashboard/src/app/account/account-home/account-home.component.scss
@@ -4,12 +4,12 @@
   display: flex;
   flex-direction: column;
   gap: rhythm(3);
+  max-width: calc(rhythm(90) * 2);
   padding: 4.5vw var(--app-layout-margin-right);
 
-  .container-row,
-  .right-column {
+  .container-row {
     display: flex;
-    gap: rhythm(3);
+    gap: rhythm(5);
   }
 
   .container.chart-container {
@@ -62,23 +62,11 @@
   }
 
   .right-column {
+    display: flex;
     flex-direction: column;
-    margin-top: rhythm(6);
+    flex-shrink: 0;
+    gap: rhythm(3);
     width: rhythm(35);
-
-    .plan-name {
-      display: flex;
-      gap: rhythm(1);
-    }
-    .plan {
-      align-items: center;
-      display: flex;
-      justify-content: space-between;
-
-      &.billing-enabled {
-        cursor: pointer;
-      }
-    }
 
     .kb-state {
       cursor: pointer;
@@ -97,5 +85,11 @@
     background-color: $color-neutral-light;
     height: 100%;
     width: 1px;
+  }
+
+  .container-table {
+    background-color: $color-neutral-lightest;
+    flex: 1 0 auto;
+    padding: rhythm(3);
   }
 }
