--- a/apps/manager-v2/src/app/manage-users/user-list/user-list.component.html
+++ b/apps/manager-v2/src/app/manage-users/user-list/user-list.component.html
@@ -7,32 +7,34 @@
     </pa-input>
   </div>
 
-  <pa-table columns="repeat(3, 1fr) 96px">
-    <pa-table-header>
-      <pa-table-cell header>Id</pa-table-cell>
-      <pa-table-cell header>Name</pa-table-cell>
-      <pa-table-cell header>Email</pa-table-cell>
-      <pa-table-cell-menu header></pa-table-cell-menu>
-    </pa-table-header>
-    <pa-table-row
-      *ngFor="let user of users$ | async"
-      [routerLink]="user.id"
-      clickable>
-      <pa-table-cell>
-        <small>{{ user.id }}</small>
-      </pa-table-cell>
-      <pa-table-cell>{{ user.name }}</pa-table-cell>
-      <pa-table-cell>{{ user.email }}</pa-table-cell>
-      <pa-table-cell-menu>
-        <pa-button
-          icon="trash"
-          aspect="basic"
-          size="small"
-          kind="destructive"
-          (click)="deleteUser($event, user)">
-          Delete account
-        </pa-button>
-      </pa-table-cell-menu>
-    </pa-table-row>
-  </pa-table>
+  <pa-infinite-scroll (reachAnchor)="onReachAnchor()">
+    <pa-table columns="repeat(3, 1fr) 96px">
+      <pa-table-header>
+        <pa-table-cell header>Id</pa-table-cell>
+        <pa-table-cell header>Name</pa-table-cell>
+        <pa-table-cell header>Email</pa-table-cell>
+        <pa-table-cell-menu header></pa-table-cell-menu>
+      </pa-table-header>
+      <pa-table-row
+        *ngFor="let user of users$ | async | slice: 0:lastIndex"
+        [routerLink]="user.id"
+        clickable>
+        <pa-table-cell>
+          <small>{{ user.id }}</small>
+        </pa-table-cell>
+        <pa-table-cell>{{ user.name }}</pa-table-cell>
+        <pa-table-cell>{{ user.email }}</pa-table-cell>
+        <pa-table-cell-menu>
+          <pa-button
+            icon="trash"
+            aspect="basic"
+            size="small"
+            kind="destructive"
+            (click)="deleteUser($event, user)">
+            Delete account
+          </pa-button>
+        </pa-table-cell-menu>
+      </pa-table-row>
+    </pa-table>
+  </pa-infinite-scroll>
 </div>
