--- a/apps/dashboard/src/app/knowledge-box/knowledge-box-home/knowledge-box-home.component.html
+++ b/apps/dashboard/src/app/knowledge-box/knowledge-box-home/knowledge-box-home.component.html
@@ -2,17 +2,18 @@
   <div
     class="endpoint-container"
     *ngIf="!!(endpoint | async)">
+    <div class="title-s">{{ 'stats.endpoint' | translate }}</div>
     <div class="endpoint-text">
-      <div class="title-s">{{ 'stats.endpoint' | translate }}</div>
       <div class="endpoint">{{ endpoint | async }}</div>
+      <pa-button
+        *ngIf="clipboardSupported"
+        aspect="basic"
+        [icon]="copyIcon"
+        iconSize="small"
+        (click)="copyEndpoint()">
+        {{ 'generic.copy' | translate }}
+      </pa-button>
     </div>
-    <pa-button
-      *ngIf="clipboardSupported"
-      aspect="basic"
-      [icon]="copyIcon"
-      (click)="copyEndpoint()">
-      {{ 'generic.copy' | translate }}
-    </pa-button>
   </div>
 
   <div class="home-main-layout">
