contributor app screen wording

--- a/apps/contributor/src/app/home/home-page.component.html
+++ b/apps/contributor/src/app/home/home-page.component.html
@@ -1,12 +1,12 @@
 <div class="home-container">
   <p>
-    By using a NUA key you could have the processing running on
-    <a
-      href="https://nuclia.cloud"
-      target="_blank">
-      nuclia.cloud
-    </a>
+    By using a NUA API Key you can utilize
+    <a href="https://nuclia.cloud" target="_blank">
+      Nuclia's Cloud Processing Engine</a>.
     <br />
     Your data would remain stored locally, but you would have access to a dashboard for following your metrics and more.
+    <br />
+    To configure your NUA API Key for the server, use the environment variable `NUA_API_KEY` or the `--nuclia-api-key`
+    cli flag.
   </p>
 </div>
