Update contributor app navbar
  - access to kb settings page (learning configuration not available on the backend yet)
  - Improve contributor home page look and feel

--- a/apps/contributor/src/app/home/home-page.component.html
+++ b/apps/contributor/src/app/home/home-page.component.html
@@ -1,12 +1,21 @@
 <div class="home-container">
   <p>
     By using a NUA API Key you can utilize
-    <a href="https://nuclia.cloud" target="_blank">
-      Nuclia's Cloud Processing Engine</a>.
+    <a
+      href="https://nuclia.cloud"
+      target="_blank">
+      Nuclia's Cloud Processing Engine
+    </a>
+    .
     <br />
     Your data would remain stored locally, but you would have access to a dashboard for following your metrics and more.
     <br />
-    To configure your NUA API Key for the server, use the environment variable `NUA_API_KEY` or the `--nuclia-api-key`
+  </p>
+  <p>
+    To configure your NUA API Key for the server, use the environment variable
+    <code>NUA_API_KEY</code>
+    or the
+    <code>--nuclia-api-key</code>
     cli flag.
   </p>
 </div>
