--- a/apps/dashboard/src/app/knowledge-box/knowledge-box-training/knowledge-box-training.component.scss
+++ b/apps/dashboard/src/app/knowledge-box/knowledge-box-training/knowledge-box-training.component.scss
@@ -20,7 +20,7 @@ h2 {
 }
 
 .last-run {
-  color: $gray-light;
+  color: $color-neutral-regular;
   font-style: italic;
   margin-top: 0;
 }
@@ -41,7 +41,7 @@ h2 {
 }
 
 .running {
-  color: $gray-light;
+  color: $color-neutral-regular;
 }
 
 .cta-container {
