--- a/apps/contributor/src/app/home/home-page.component.scss
+++ b/apps/contributor/src/app/home/home-page.component.scss
@@ -3,6 +3,7 @@
 .home-container {
   align-items: center;
   display: flex;
+  flex-direction: column;
   height: calc(100vh - var(--app-topbar-height));
   justify-content: center;
 
