Update contributor title and favicon

--- a/libs/common/src/lib/topbar/topbar.component.html
+++ b/libs/common/src/lib/topbar/topbar.component.html
@@ -12,9 +12,9 @@
       class="is-stage"
       alt="Stage" />
     <img
-      src="assets/logos/symbol.svg"
+      [src]="!standalone ? 'assets/logos/nuclia-symbol.svg' : 'assets/logos/nucliadb-symbol.svg'"
       class="topbar-logo-collapsed"
-      alt="Nuclia" />
+      [alt]="!standalone ? 'Nuclia' : 'NucliaDB'" />
   </button>
 
   <div class="topbar-actions">
