--- a/apps/desktop/src/app/upload/select-files/select-files.component.html
+++ b/apps/desktop/src/app/upload/select-files/select-files.component.html
@@ -3,6 +3,7 @@
   <div>{{ 'upload.select.description' | translate }}</div>
   <div class="header">
     <pa-checkbox
+      *ngIf="!(currentSource | async).permanentSync"
       [value]="isSelectingAll"
       (valueChange)="toggleSelectAll($event)">
       {{ 'upload.select.all' | translate }}
