Working search page on contributor app

--- a/libs/common/src/lib/page-not-found/page-not-found.component.html
+++ b/libs/common/src/lib/page-not-found/page-not-found.component.html
@@ -16,39 +16,10 @@
       <div class="body-m">
         <a
           class="back-link"
-          href="/">
+          [href]="baseHref">
           Go back to Home
         </a>
       </div>
     </div>
   </div>
 </div>
-
-<!--
-<div class="user-background">
-  <div class="outter_notfound_form">
-    <div class="inner_notfound_form">
-      <div class="logo">
-        <img src="assets/logos/logo.svg" />
-      </div>
-      <div class="notfound_content">
-        <div id="error-404">
-          <div class="content">
-            <div class="error-code">404</div>
-
-            <div class="message">Sorry but we could not find the page you are looking for</div>
-
-            <div class="actions">
-              <a
-                class="back-link"
-                href="/">
-                Go back to Home
-              </a>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
-</div>
--->
