--- a/libs/common/src/lib/upload/create-link/create-link.component.scss
+++ b/libs/common/src/lib/upload/create-link/create-link.component.scss
@@ -24,3 +24,9 @@ nsi-spinner {
   top: 50%;
   transform: translateX(-50%) translateY(-50%);
 }
+
+.warning {
+  background-color: $color-secondary-regular;
+  padding: rhythm(1);
+  margin-bottom: rhythm(3);
+}
