--- a/libs/common/src/lib/upload/upload-text/upload-text.component.html
+++ b/libs/common/src/lib/upload/upload-text/upload-text.component.html
@@ -11,6 +11,12 @@
     </div>
   </pa-modal-title>
   <pa-modal-content>
+    <ng-container *ngIf="standalone">
+      <div
+        *ngIf="(hasValidKey | async) === false"
+        class="warning body-s"
+        [innerHTML]="'standalone.upload-no-nua-key' | translate"></div>
+    </ng-container>
     <app-csv-select
       [help]="['upload.csv_description', 'upload.csv_format', 'upload.csv_labels']"
       [fields]="4"
